--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>javahome</groupId>
 	<artifactId>Realtime</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.26-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>ims Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	
@@ -23,9 +23,9 @@
 		<project.scm.id>gitserver</project.scm.id>
 	</properties>
 	<scm>
-			<url>https://github.com/sreekanth1990/javaproject</url>
-			<connection>scm:git:https://github.com/sreekanth1990/javaproject.git</connection>
-			<developerConnection>scm:git:https://github.com/sreekanth1990/javaproject.git</developerConnection>
+			<url>https://github.com/kiranstar999/repos</url>
+			<connection>scm:git:https://github.com/kiranstar999/repos.git</connection>
+			<developerConnection>scm:git:https://github.com/kiranstar999/repos.git</developerConnection>
 	  
     <tag>HEAD</tag>
   </scm>
